@@ -1242,7 +1242,39 @@ script.run();</pre>
 			<h4><a name="textual-programming-fsharp">F#</a></h4>
 
 			<p>
-			При программировании ТРИК на языке F# в качестве библиотеки поддержки времени выполнения используется библиотека TRIK-Sharp (<a href="https://github.com/kashmervil/trik-sharp">https://github.com/kashmervil/trik-sharp</a>), её описание и набор примеров доступны в Github-репозитории проекта. Познакомиться с языком F# и функциональным программированием вообще можно, например, с помощью книги Д. Сошникова "Программирование на F#" (<a href="http://www.ozon.ru/context/detail/id/6151130/">http://www.ozon.ru/context/detail/id/6151130/</a>). Обратите внимание, что для компиляции программ потребуется компилятор F# (устанавливаемый вместе со средой Microsoft Visual Studio версий не ниже 2010, отдельно его можно скачать отсюда: <a href="http://www.microsoft.com/en-us/download/details.aspx?id=44011">http://www.microsoft.com/en-us/download/details.aspx?id=44011</a>), а исполнения программ на роботе должен быть установлен пакет mono, который не устанавливается по умолчанию.
+			При программировании ТРИК на языке F# в качестве библиотеки поддержки времени выполнения используется библиотека
+			TRIK-Sharp (<a href="https://github.com/kashmervil/trik-sharp">https://github.com/kashmervil/trik-sharp</a>),
+			её описание и набор примеров доступны в Github-репозитории проекта. Познакомиться с языком F# и функциональным
+			программированием вообще можно, например, с помощью книги Д. Сошникова "Программирование на F#"
+			(<a href="http://www.ozon.ru/context/detail/id/6151130/">http://www.ozon.ru/context/detail/id/6151130/</a>).
+			Обратите внимание, что для компиляции программ потребуется компилятор F# (устанавливаемый вместе со средой
+			Microsoft Visual Studio версий не ниже 2010, отдельно его можно скачать отсюда:
+			<a href="http://www.microsoft.com/en-us/download/details.aspx?id=44011">http://www.microsoft.com/en-us/download/details.aspx?id=44011</a>),
+			а исполнения программ на роботе должен быть установлен пакет mono, который не устанавливается по умолчанию.
+			</p>
+
+			<h4><a name="textual-programming-pascal">Pascal</a></h4>
+
+			<p>
+			В качестве языка текстового программирования для ТРИК также может использоваться язык Паскаль (точнее, его
+			диалект PascalABC.NET). Для этого должен быть установлен плагин поддержки Паскаля в TRIK Studio и компилятор
+			PascalABC.NET, который можно скачать по ссылке
+			<a href="http://pascalabc.net/ssyilki-dlya-skachivaniya">http://pascalabc.net/ssyilki-dlya-skachivaniya</a>.
+			Достаточно консольного компилятора и необходимых компонент (PABCNETC.ZIP), если на компьютере установлен
+			.NET Framework версии не ниже 4.5.1 или Mono. Путь до установленного компилятора (pabcnetc.exe) надо указать
+			в настройках на вкладке "Роботы". При этом в этом же окне должна быть выставлена модель ТРИК версии 2015 года.
+			</p>
+
+			<p>
+			В качестве библиотеки поддержки времени выполнения для программ на Паскале, как и в случае с F#, тоже используется
+			библиотека TRIK-Sharp (<a href="https://github.com/kashmervil/trik-sharp">https://github.com/kashmervil/trik-sharp</a>),
+			а в качестве среды выполнения – виртуальная машина mono, установленная на роботе (поэтому программы, как и в случае с
+			F#, могут запускаться несколько секунд, это вполне нормально).
+			</p>
+
+			<p>
+			Множество полезной информации о Паскале и его диалекте PascalABC.NET можно получить на сайте авторов этого
+			компилятора, <a href="http://pascalabc.net/">http://pascalabc.net/</a>.
 			</p>
 
 			<h3><a name="run-programs">Запуск программ</a></h3>
