@@ -1,3 +1,6 @@
+TRIK Studio 3.1.4:
+- Добавлена поддержка генерации в Паскаль для TRIK! Используется компилятор PascalABC.NET, который надо установить отдельно.
+
 TRIK Studio 3.1.3:
 - Практически полная поддержка EV3! Реализован режим автономной работы со стандартной прошивкой EV3, двумерная модель для EV3, поддержаны новые сенсоры, значительно улучшены старые механизмы работы среды с устройством EV3.
 - Значительно улучшена производительность редактора. Теперь многие операции (такие как отрисовка элементов, вставка большого количества элементов и их выделение) работают в десятки раз быстрее!
